# AirSceen

./: .gitignore  README.md  pyproject.toml
docs/: PROJECT_MAP.md  ROADMAP.md
src/airscreen/: __init__.py  __main__.py  app.py  cli.py  config.py  gaze_calibration.py  gestures.py  landmarks.py  recording.py  red_circles.py
src/airscreen/input/: __init__.py  pointer.py
src/airscreen/vision/: camera.py  gaze_tracker.py  hand_tracker.py  preview.py
tests/: test_camera.py  test_gaze_calibration.py  test_gaze_tracker.py  test_gestures.py  test_hand_tracker.py  test_preview.py  test_recording.py  test_red_circles.py
